--- a/assets/pc.css
+++ b/assets/pc.css
@@ -9,7 +9,7 @@
         justify-content: space-between;
     }
     .enf1{
-        background-image: url("../assets/samfr.jpg");
+        background-image: url("/../assets/samfr.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         width: 50%;
