--- a/home/pc.css
+++ b/home/pc.css
@@ -9,7 +9,7 @@
         justify-content: space-between;
     }
     .enf1{
-        background-image: url("/home/samfr.jpg");
+        background-image: url("home/samfr.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         width: 50%;
