--- a/home/pc.css
+++ b/home/pc.css
@@ -9,7 +9,7 @@
         justify-content: space-between;
     }
     .enf1{
-        background-image: url("https://github.com/laurence-71/html_simple-page/blob/8489618da1f5ec51182dd9fcd260c838547d4786/home/samfr.jpg");
+        background-image: url("samfr.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         width: 50%;
